# advent-of-code-2022

./: .gitignore  README.md
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/src/: main.rs
day-03/: Cargo.toml
day-05/: Cargo.toml
day-05/src/: main.rs  warehouse.rs
day-07/src/: file_tree.rs
day-08/: Cargo.toml
day-08/src/: forest.rs  main.rs
day-09/src/: main.rs  point.rs
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs  monkey.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13-py/: .pre-commit-config.yaml  README.md  pyproject.toml
day-13-py/day13py/: main.py
day-13-py/tests/: test_problem.py
day-14/: Cargo.toml
day-14/src/: grid.rs  main.rs  point.rs
day-15/: Cargo.toml
day-15/src/: main.rs  point.rs
day-2/src/: main.rs
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/src/: crane_instruction.rs  main.rs  warehouse.rs
day-6/: Cargo.toml
day-6/src/: main.rs
day-7/: Cargo.toml
day-7/src/: command.rs  main.rs
day-9/: Cargo.toml
day-9/src/: main.rs  move_func.rs  movement.rs  rope.rs
template/: Cargo.toml
template/src/: main.rs
