[package]
name = "day-9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"

[dependencies.reqwest]
version = "0.10.10"
default-features = false
features = ["rustls-tls", "blocking"]
